# finpay

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.config/: example.toml  logging_example.yaml
alembic/: env.py
alembic/versions/: 0001_chat_tables.py
app/: lifespan.py  main.py
app/bot/: __main__.py
app/bot/handlers/: __init__.py  commands.py  fsm.py  text.py
app/bot/keyboards/: inline.py
app/bot/services/: backend_client.py
app/chat/: context.py  deps.py  domain.py  repository.py  routes.py  service.py
app/chat/repositories/: json_repo.py  pg_models.py  pg_repo.py
app/core/: exceptions.py
app/exceptions/: handlers.py
app/llm/: client.py
app/observability/: pii.py  tracing.py
app/prompts/: loader.py  service_facts.j2  system_v1.j2
app/prompts/tools/: check_transaction_status.md  get_payment_system_status.md
app/routers/: chat.py  health.py  models.py
app/schemas/: chat.py  models.py
app/services/: llm.py  llm_client.py
app/services/security/: input_validator.py  output_filter.py
app/settings/: __init__.py  bot.py  chat.py  logging.py  openai.py  redis.py
app/tools/: handlers.py  schemas.py
app/utils/: response_parser.py
docs/: architecture.md  chat.md
docs/litellm/: config.yaml
docs/security/: garak_after_2026-06-20.md  garak_baseline_2026-06-20.md
docs/security/reports/after/: after.report.html
docs/security/reports/baseline/: baseline.report.html
eval/: check_thresholds.py  golden_dataset.json  run_evaluation.py  thresholds.yaml
eval/security/: rest_config.json  throttle_proxy.py
examples/: run_tool_call.py
modes/: __init__.py  bot.py  rest.py
scripts/: benchmark.py
tests/: conftest.py  test_pii.py
tests/bot/: test_backend_client.py  test_fsm.py
tests/chat/: conftest.py  test_repository_contract.py  test_routes.py  test_service_context.py
tests/unit/: test_llm_agent.py  test_llm_service.py  test_prompts.py  test_response_parsing.py  test_schemas.py  test_security.py  test_tools.py
