[project]
name = "finpay"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "requests>=2.31",
    "jsonschema>=4.0",
    "pyyaml>=6.0.3",
    "litellm[proxy]>=1.87.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "redis[asyncio]>=5.0",
    "httpx>=0.27",
    "tenacity>=9.0",
]
